--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   file_picker: ^5.3.1
   mocktail: ^0.3.0
   multiselect: ^0.1.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
