--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   file_picker: ^5.3.1
   mocktail: ^0.3.0
   multiselect: ^0.1.0
+  syncfusion_flutter_charts: ^21.2.10
+  syncfusion_flutter_gauges: ^21.2.10
 
 dev_dependencies:
   flutter_test:
