--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_charts: ^21.2.10
   syncfusion_flutter_gauges: ^21.2.10
   intl: ^0.18.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
