--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   cached_network_image: ^3.2.3
   firedart: ^0.9.7
   fluent_ui: ^4.7.3
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
 
 dev_dependencies:
   flutter_test:
