--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
       path: plugins/window_size
   shared_preferences: ^2.2.1
   firebase_auth: ^4.9.0
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
