--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,10 +59,16 @@ dependencies:
   shared_preferences: ^2.2.1
   firebase_auth: ^4.9.0
   flutter_slidable: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path: "assets/logo/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
