--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,14 @@ dependencies:
   firebase_auth: ^4.9.0
   flutter_slidable: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 flutter_icons:
   ios: true
