--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,16 +60,21 @@ dependencies:
   firebase_auth: ^4.9.0
   flutter_slidable: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+  hive_generator: any
 
 flutter_icons:
   ios: true
   android: true
   image_path: "assets/logo/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/logo/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
